--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bonaparte, François-Charles-Joseph, Herzog von Reichstadt, 1811-1832 -- Drama'
 - !lcc 'PQ'
+- GITenberg
 title: L'Aiglon
 url: http://www.gutenberg.org/ebooks/30012
